--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "statikbe/craft-cta-field",
     "description": "Call to action & link fields made easy",
     "type": "craft-plugin",
-    "version": "2.0.0-beta.2",
+    "version": "2.0.0",
     "keywords": [
         "craft",
         "cms",
